BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/TrackingHistory__c.object-meta.xml
<CustomObject>
    <description>Object to track changes</description>
    <label>TrackingHistory</label>
    <nameField>
        <displayFormat>TH-{00000000}</displayFormat>
        <label>TrackingHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrackingHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>