BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NewValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>