BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OldValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>