BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <description>Salesforce Id of the modified object</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Object</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>