BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/fields/Tracking_Field__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Field__c</fullName>
    <description>API name of modified field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>