BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/fields/Tracking_ObjRecordType__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ObjRecordType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking ObjRecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>