BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/recordTypes/CampaignMember.recordType-meta.xml
<RecordType>
    <fullName>CampaignMember</fullName>
    <active>true</active>
    <label>Campaign Member</label>
</RecordType>