BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/recordTypes/Case.recordType-meta.xml
<RecordType>
    <fullName>Case</fullName>
    <active>true</active>
    <label>Case</label>
</RecordType>