BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/recordTypes/CRM_Claims.recordType-meta.xml
<RecordType>
    <fullName>CRM_Claims</fullName>
    <active>true</active>
    <label>CRM_Claims</label>
</RecordType>