BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/recordTypes/CRM_ProposteContrattiPreventivi.recordType-meta.xml
<RecordType>
    <fullName>CRM_ProposteContrattiPreventivi</fullName>
    <active>true</active>
    <label>CRM_ProposteContrattiPreventivi</label>
</RecordType>