BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/recordTypes/FinServAlert.recordType-meta.xml
<RecordType>
    <fullName>FinServAlert</fullName>
    <active>true</active>
    <label>FinServAlert</label>
</RecordType>