BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/recordTypes/IngaggioRetiEsterne.recordType-meta.xml
<RecordType>
    <fullName>IngaggioRetiEsterne</fullName>
    <active>true</active>
    <label>IngaggioRetiEsterne</label>
</RecordType>