BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>true</active>
    <label>Opportunity_Self</label>
</RecordType>