BPER/DEVF/force-app/main/default/objects/TrackingHistory__c/recordTypes/Tagliandi.recordType-meta.xml
<RecordType>
    <fullName>Tagliandi</fullName>
    <active>true</active>
    <label>Tagliandi</label>
</RecordType>